<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".Introduction.splashScreen">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/opensbold"
        android:text="@string/splash_title_name"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/splash_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/opensregular"
        android:text="@string/splash_tagline"
        android:textSize="22sp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splashanim" />

    <TextView
        android:id="@+id/splash_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/splash_credit"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ottercodisplayregular"/>


</RelativeLayout>