<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    tools:context=".UserCommon.loginActivityGuardian">

    <TextView
        android:id="@+id/battery_Indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:text="@string/battery" />

    <TextView
        android:id="@+id/tv_guardian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/battery_Indication"
        android:fontFamily="@font/opensbold"
        android:gravity="center"
        android:text="Guardian Sign In"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_below="@+id/tv_guardian"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="25dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/login_phoneNo_Guardian"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_Guardian"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_Guardian"
            android:layout_marginTop="10dp"
            android:hint="Enter password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_remember"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_user_password_login"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/opensbold"
            android:text="@string/remember_me"
            android:textColor="@color/black" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login_guardian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:fontFamily="@font/opensregular"
        android:padding="40dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="36sp" />


</RelativeLayout>