<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eyesyhopefyp.introductoryActivity"
    android:background="#fcfcfc"
    android:gravity="center"
    android:id="@+id/ll">

    <TextView
        android:layout_alignParentRight="true"
        android:id="@+id/battery_Indication"
        android:layout_margin="20dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"/>

    <LinearLayout
        android:id="@+id/row_one_intro"
        android:layout_below="@+id/battery_Indication"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_blind_intro"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:src="@drawable/ic_login_user_blind"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/opensregular"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_blind"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_guardian_intro"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundpink"
                    android:src="@drawable/ic_login_guardian"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/opensregular"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_guardian"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_two_intro"
        android:layout_below="@+id/row_one_intro"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/signup_card_blind_intro"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundgreen"
                    android:src="@drawable/ic_add_user"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensregular"
                    android:text="@string/signup_blind"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/signup_card_guardian_intro"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="190dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundyello"
                    android:padding="10dp"
                    android:src="@drawable/ic_add_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/opensregular"
                    android:text="@string/signup_guardian"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <Button
        android:id="@+id/btn_Assist_intro"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/row_two_intro"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:fontFamily="@font/opensregular"
        android:gravity="center"
        android:text="@string/dashboard_btn_assist"
        android:textSize="36sp" />



</RelativeLayout>